Added Regression content

--- a/week_1/notebooks/6_tuning.ipynb
+++ b/week_1/notebooks/6_tuning.ipynb
@@ -262,8 +262,8 @@
     "        X_train_fold, X_val_fold = X_train[selected_features].iloc[train_index], X_train[selected_features].iloc[val_index]\n",
     "        y_train_fold, y_val_fold = y_train.iloc[train_index], y_train.iloc[val_index]\n",
     "\n",
-    "        #model.fit(X_train_fold, y_train_fold, eval_set=(X_val_fold, y_val_fold), early_stopping_rounds=200)\n",
-    "        model.fit(X_train_fold, y_train_fold, early_stopping_rounds=300)\n",
+    "        model.fit(X_train_fold, y_train_fold, eval_set=(X_val_fold, y_val_fold), early_stopping_rounds=200)\n",
+    "        #model.fit(X_train_fold, y_train_fold)\n",
     "        y_pred_fold = model.predict_proba(X_val_fold)[:, 1]\n",
     "        avg_precision_scores.append(average_precision_score(y_val_fold, y_pred_fold))\n",
     "\n",
