--- a/case/notebooks/first_look.ipynb
+++ b/case/notebooks/first_look.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +235,252 @@
     "\n",
     "df_test.drop(columns=['default']).to_parquet('./case/data/processed/lending_club_case_case_test_dataset.parquet')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_teste = pd.read_parquet('./case/data/processed/lending_club_case_train_dataset.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>funded_amnt</th>\n",
+       "      <th>funded_amnt_inv</th>\n",
+       "      <th>term</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sub_grade</th>\n",
+       "      <th>emp_title</th>\n",
+       "      <th>...</th>\n",
+       "      <th>hardship_end_date</th>\n",
+       "      <th>payment_plan_start_date</th>\n",
+       "      <th>hardship_length</th>\n",
+       "      <th>hardship_dpd</th>\n",
+       "      <th>hardship_loan_status</th>\n",
+       "      <th>orig_projected_additional_accrued_interest</th>\n",
+       "      <th>hardship_payoff_balance_amount</th>\n",
+       "      <th>hardship_last_payment_amount</th>\n",
+       "      <th>debt_settlement_flag</th>\n",
+       "      <th>default</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1077501</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>4976.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0.106506</td>\n",
+       "      <td>162.87500</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1077430</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.152710</td>\n",
+       "      <td>59.84375</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>Ryder</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1077175</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0.159546</td>\n",
+       "      <td>84.31250</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1076863</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0.134888</td>\n",
+       "      <td>339.25000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>AIR RESOURCES BOARD</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1075358</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.126953</td>\n",
+       "      <td>67.81250</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>University Medical Group</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 142 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  loan_amnt  funded_amnt  funded_amnt_inv  term  int_rate  \\\n",
+       "0  1077501       5000         5000           4976.0    36  0.106506   \n",
+       "1  1077430       2500         2500           2500.0    60  0.152710   \n",
+       "2  1077175       2400         2400           2400.0    36  0.159546   \n",
+       "3  1076863      10000        10000          10000.0    36  0.134888   \n",
+       "4  1075358       3000         3000           3000.0    60  0.126953   \n",
+       "\n",
+       "   installment grade sub_grade                 emp_title  ...  \\\n",
+       "0    162.87500     B        B2                       NaN  ...   \n",
+       "1     59.84375     C        C4                     Ryder  ...   \n",
+       "2     84.31250     C        C5                       NaN  ...   \n",
+       "3    339.25000     C        C1       AIR RESOURCES BOARD  ...   \n",
+       "4     67.81250     B        B5  University Medical Group  ...   \n",
+       "\n",
+       "  hardship_end_date payment_plan_start_date  hardship_length hardship_dpd  \\\n",
+       "0               NaT                     NaT               -1           -1   \n",
+       "1               NaT                     NaT               -1           -1   \n",
+       "2               NaT                     NaT               -1           -1   \n",
+       "3               NaT                     NaT               -1           -1   \n",
+       "4               NaT                     NaT               -1           -1   \n",
+       "\n",
+       "  hardship_loan_status orig_projected_additional_accrued_interest  \\\n",
+       "0                  NaN                                       -1.0   \n",
+       "1                  NaN                                       -1.0   \n",
+       "2                  NaN                                       -1.0   \n",
+       "3                  NaN                                       -1.0   \n",
+       "4                  NaN                                       -1.0   \n",
+       "\n",
+       "  hardship_payoff_balance_amount hardship_last_payment_amount  \\\n",
+       "0                           -1.0                         -1.0   \n",
+       "1                           -1.0                         -1.0   \n",
+       "2                           -1.0                         -1.0   \n",
+       "3                           -1.0                         -1.0   \n",
+       "4                           -1.0                         -1.0   \n",
+       "\n",
+       "  debt_settlement_flag default  \n",
+       "0                    N     0.0  \n",
+       "1                    N     1.0  \n",
+       "2                    N     0.0  \n",
+       "3                    N     0.0  \n",
+       "4                    N     0.0  \n",
+       "\n",
+       "[5 rows x 142 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_teste.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
