--- a/week_1/notebooks/2_define_churn.ipynb
+++ b/week_1/notebooks/2_define_churn.ipynb
@@ -44,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/marcus.silva/Code/modern-ml/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "d:\\Files\\repositorios\\modern-ml\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "load-train-data",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3926058 entries, 978127 to 462039\n",
+      "Index: 3926058 entries, 1 to 4312994\n",
       "Data columns (total 25 columns):\n",
       " #   Column                    Dtype         \n",
       "---  ------                    -----         \n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d8507eec",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
     "\n",
     "max_test_date = test_df['date'].max()\n",
     "min_test_date = test_df['date'].min()\n",
-    "print(f\"Max test date: {max_test_date}\")\n",
+    "print(f\"Max test date: {max_test_date}\")  \n",
     "print(f\"Min test date: {min_test_date}\")\n",
     "\n",
     "# Merge train_df and test_df into a new dataframe called df \n",
@@ -1136,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
