--- a/week_1/notebooks/3_feature_engineering.ipynb
+++ b/week_1/notebooks/3_feature_engineering.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/marcus.silva/Code/modern-ml/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "d:\\Files\\repositorios\\modern-ml\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -59,27 +59,27 @@
       " #   Column                    Dtype         \n",
       "---  ------                    -----         \n",
       " 0   Id                        int64         \n",
-      " 1   customer_id               int64         \n",
-      " 2   interest_rate             float64       \n",
+      " 1   customer_id               int32         \n",
+      " 2   interest_rate             float16       \n",
       " 3   name                      object        \n",
       " 4   country                   object        \n",
       " 5   date_of_birth             object        \n",
       " 6   address                   object        \n",
       " 7   date                      datetime64[ns]\n",
-      " 8   atm_transfer_in           int64         \n",
-      " 9   atm_transfer_out          int64         \n",
-      " 10  bank_transfer_in          int64         \n",
-      " 11  bank_transfer_out         int64         \n",
-      " 12  crypto_in                 int64         \n",
-      " 13  crypto_out                int64         \n",
-      " 14  bank_transfer_in_volume   float64       \n",
-      " 15  bank_transfer_out_volume  float64       \n",
-      " 16  crypto_in_volume          float64       \n",
-      " 17  crypto_out_volume         float64       \n",
-      " 18  complaints                int64         \n",
+      " 8   atm_transfer_in           int16         \n",
+      " 9   atm_transfer_out          int16         \n",
+      " 10  bank_transfer_in          int32         \n",
+      " 11  bank_transfer_out         int32         \n",
+      " 12  crypto_in                 int16         \n",
+      " 13  crypto_out                int8          \n",
+      " 14  bank_transfer_in_volume   float32       \n",
+      " 15  bank_transfer_out_volume  float32       \n",
+      " 16  crypto_in_volume          float16       \n",
+      " 17  crypto_out_volume         float16       \n",
+      " 18  complaints                int8          \n",
       " 19  touchpoints               object        \n",
       " 20  csat_scores               object        \n",
-      " 21  tenure                    int64         \n",
+      " 21  tenure                    int16         \n",
       " 22  from_competitor           bool          \n",
       " 23  job                       object        \n",
       " 24  churn_due_to_fraud        bool          \n",
@@ -87,15 +87,15 @@
       " 26  Usage                     object        \n",
       " 27  churn                     int64         \n",
       " 28  next_date                 datetime64[ns]\n",
-      " 29  days_diff                 float64       \n",
-      " 30  split                     object        \n",
-      "dtypes: bool(3), datetime64[ns](2), float64(6), int64(11), object(9)\n",
-      "memory usage: 1.1+ GB\n"
+      " 29  days_diff                 int64         \n",
+      " 30  date_trunc_month          datetime64[ns]\n",
+      "dtypes: bool(3), datetime64[ns](3), float16(3), float32(2), int16(4), int32(3), int64(3), int8(2), object(8)\n",
+      "memory usage: 761.3+ MB\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_parquet('./week_1/data/processed/full_churn_data_with_target.parquet')\n",
+    "df = pd.read_parquet('./week_1/data/processed/full_dataset.parquet')\n",
     "df.reset_index(drop=False, inplace=True) \n",
     "df.sort_values(by=['customer_id', 'date'], ascending=True, inplace=True)\n",
     "df.info()"
@@ -111,9 +111,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Memory usage of dataframe is 1144.45 MB\n",
+      "Memory usage of dataframe is 761.29 MB\n",
       "Memory usage after optimization is: 675.58 MB\n",
-      "Decreased by 41.0%\n"
+      "Decreased by 11.3%\n"
      ]
     }
    ],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "aaa606d2",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "3ffbde05",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "c1de8779",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "74b54f24",
    "metadata": {},
    "outputs": [
@@ -465,9 +465,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Memory usage of dataframe is 3791.33 MB\n",
+      "Memory usage of dataframe is 3569.50 MB\n",
       "Memory usage after optimization is: 2767.88 MB\n",
-      "Decreased by 27.0%\n"
+      "Decreased by 22.5%\n"
      ]
     }
    ],
@@ -485,13 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "e7d7f2b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cols that will not be used during the traning of the model\n",
-    "non_features_list = ['Id', 'customer_id','name','date_of_birth','address','date', 'job', 'touchpoints','csat_scores','Usage','churn','next_date','days_diff','split','churn_365','churn_420','churn_date','churn_18_months']\n",
+    "non_features_list = ['Id', 'customer_id','name','date_of_birth','address','date', 'job', 'touchpoints','csat_scores','Usage','churn','next_date','days_diff','churn_365','churn_420','churn_date','churn_18_months']\n",
     "\n",
     "# Saving the features list\n",
     "features_list = list(df.drop(columns=non_features_list).columns)\n",
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "661540c6",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
