--- a/week_1/notebooks/4_sample_date_split.ipynb
+++ b/week_1/notebooks/4_sample_date_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/marcus.silva/Code/modern-ml/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "d:\\Files\\repositorios\\modern-ml\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -67,8 +67,8 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 5286530 entries, 0 to 3668009\n",
       "Columns: 190 entries, Id to churn_18_months\n",
-      "dtypes: bool(1), category(2), datetime64[ns](2), float16(112), float32(49), int16(5), int32(3), int8(15), object(1)\n",
-      "memory usage: 2.4+ GB\n"
+      "dtypes: bool(1), category(2), datetime64[ns](3), float16(112), float32(49), int16(5), int32(3), int8(15)\n",
+      "memory usage: 2.4 GB\n"
      ]
     }
    ],
@@ -88,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Shape:  (306649, 184)\n",
-      "Validation shape:  (283510, 184)\n",
-      "Calibration shape:  (70878, 184)\n"
+      "Train Shape:  (306649, 185)\n",
+      "Validation shape:  (283510, 185)\n",
+      "Calibration shape:  (70878, 185)\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
